--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,19 @@
 version: 0.2
+
 phases:
+  install:
+    runtime-versions:
+      nodejs: 22
+    commands:
+      - npm ci
+  build:
+    commands:
+      - npm run build
   post_build:
     commands:
-      - aws s3 sync . s3://alexgafita.com --delete
+      - aws s3 sync out/ s3://alexgafita.com --delete
       - aws cloudfront create-invalidation --distribution-id E2ZOISQRSSWJTF --paths "/*"
+
 artifacts:
   files:
     - '**/*'
