--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "devicons-react": "^1.5.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.555.0",
-    "next": "16.0.7",
+    "next": "^16.1.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0"
@@ -30,9 +30,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "baseline-browser-mapping": "^2.9.2",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.4",
+    "baseline-browser-mapping": "^2.10.0",
+    "eslint": "^10.0.2",
+    "eslint-config-next": "^12.0.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
